--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,8 @@
 .header {
   position: relative; }
   .header__top {
-    position: absolute;
-    background-color: #56CCF2;
     position: relative;
+    background-color: #56ccf2;
     width: 1029px;
     height: 848px; }
   .header__rotate {
@@ -11,7 +10,7 @@
     width: 1108px;
     height: 601px;
     left: 583px;
-    background: #56CCF2;
+    background: #56ccf2;
     -webkit-transform: rotate(-65deg);
             transform: rotate(-65deg); }
   .header__nav {
@@ -20,7 +19,7 @@
     left: 227px; }
 
 .nav {
-  color: white; }
+  color: #fff; }
   .nav__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -31,12 +30,12 @@
       font-weight: 700;
       font-size: 32px;
       line-height: 100%;
-      color: white;
+      color: #fff;
       padding-right: 80px; }
     .nav__item_act {
       padding: 0 70px; }
   .nav__link {
-    color: white;
+    color: #fff;
     font-weight: bold;
     font-size: 16px;
     line-height: 150%; }
@@ -50,7 +49,7 @@
         left: 0;
         right: 0;
         bottom: -10px;
-        background: #FCC304;
+        background: #fcc304;
         border-radius: 32px; }
 
 @media screen and (max-width: 999px) {
@@ -105,13 +104,13 @@ a:visited {
     font-weight: 900;
     font-size: 64px;
     line-height: 150%;
-    color: white;
+    color: #fff;
     margin-bottom: 22px;
     margin-left: 100px; }
   .heading__descrip {
     font-size: 24px;
     line-height: 150%;
-    color: white;
+    color: #fff;
     margin: 0 100px; }
   .heading__button {
     margin-left: 100px;
@@ -119,7 +118,7 @@ a:visited {
     font-weight: bold;
     font-size: 16px;
     line-height: 150%;
-    background-color: white;
+    background-color: #fff;
     border-radius: 64px;
     width: 226px;
     height: 56px;
@@ -144,7 +143,7 @@ a:visited {
     line-height: 150%;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: #56CCF2;
+    color: #56ccf2;
     bottom: 144px;
     left: 98px; }
   .photo__text {
@@ -153,14 +152,14 @@ a:visited {
     font-weight: 900;
     font-size: 20px;
     line-height: 140%;
-    color: white;
+    color: #fff;
     bottom: 80px;
     left: 98px; }
   .photo__button {
     position: absolute;
     width: 162.46px;
     height: 64px;
-    background-color: #FCC304;
+    background-color: #fcc304;
     border-radius: 50px;
     border: none;
     top: calc(100% - 350px);
@@ -168,7 +167,7 @@ a:visited {
     .photo__button::before {
       content: "<";
       font-size: 36px;
-      color: white;
+      color: #fff;
       display: block;
       position: absolute;
       top: 9px;
@@ -176,14 +175,16 @@ a:visited {
     .photo__button::after {
       content: ">";
       font-size: 36px;
-      color: white;
+      color: #fff;
       display: block;
       position: absolute;
       top: 9px;
       right: 30px; }
   .photo__networks {
     position: absolute;
-    left: calc( 1146px + 65px); }
+    left: calc( 1146px + 65px);
+    top: 10px;
+    right: 144px; }
 
 .networks {
   display: -webkit-box;
@@ -238,7 +239,7 @@ a:visited {
   font-weight: 800;
   font-size: 16px;
   line-height: 150%;
-  color: #56CCF2;
+  color: #56ccf2;
   position: relative; }
   .main-heading::before {
     content: "";
@@ -250,7 +251,7 @@ a:visited {
     height: 21px; }
 
 .product-card {
-  background-color: white; }
+  background-color: #fff; }
 
 .cards {
   display: -webkit-box;
@@ -278,7 +279,6 @@ a:visited {
     margin: 0; }
 
 .title {
-  font-family: Muli;
   font-style: normal;
   font-weight: 900;
   font-size: 48px;
