--- a/styles/main.css
+++ b/styles/main.css
@@ -192,7 +192,7 @@ a:visited {
   display: flex;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg); }
-  .networks__social {
+  .networks__soc {
     font-weight: 800;
     font-size: 13px;
     line-height: 150%;
