--- a/styles/main.css
+++ b/styles/main.css
@@ -362,8 +362,8 @@ a:visited {
   width: 240px;
   height: 256px;
   background: #fff;
-  -webkit-box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.02);
-          box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.02); }
+  -webkit-box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.05);
+          box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.05); }
   .block_another {
     margin-top: 128px; }
   .block__circle {
@@ -374,7 +374,7 @@ a:visited {
     width: 48px;
     height: 48px;
     border-radius: 50%;
-    top: 35px;
+    top: 48px;
     left: 96px; }
     .block__circle_two {
       background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.25)), to(rgba(255, 255, 255, 0))), #fcc304;
@@ -408,8 +408,7 @@ a:visited {
     font-weight: normal;
     font-size: 12px;
     line-height: 150%;
-    text-align: center;
-    padding-bottom: 48px; }
+    text-align: center; }
 
 .block__cards_one {
   -webkit-box-sizing: border-box;
